--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+vendor
+composer.lock
+
 ### JetBrains template
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio
 
