--- a/composer.json
+++ b/composer.json
@@ -24,13 +24,17 @@
     "issues": "https://github.com/jamiehollern/futbol/issues",
     "source": "https://github.com/jamiehollern/futbol"
   },
+  "require": {
+    "php": ">=5.6.0",
+    "anahkiasen/underscore-php": "~2.0"
+  },
   "require-dev": {
     "monolog/monolog": "1.0.*",
     "mockery/mockery": "~0.9"
   },
   "autoload": {
     "psr-4": {
-      "jamiehollern\\Futbol\\": "src/"
+      "Futbol": "src/"
     }
   }
 }
