--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "jamiehollern/Futbol",
+  "name": "jamiehollern/futbol",
   "description": "Football (soccer) data and statistics manipulation.",
   "type": "library",
   "keywords": [
@@ -25,16 +25,22 @@
     "source": "https://github.com/jamiehollern/futbol"
   },
   "require": {
-    "php": ">=5.6.0",
+    "php": ">=7.0",
     "anahkiasen/underscore-php": "~2.0"
   },
   "require-dev": {
     "monolog/monolog": "1.0.*",
-    "mockery/mockery": "~0.9"
+    "mockery/mockery": "~0.9",
+    "phpunit/phpunit": "^6.0"
   },
   "autoload": {
     "psr-4": {
-      "Futbol\\": "src/Futbol/"
+      "jamiehollern\\futbol\\": "src/futbol/"
+    }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "jamiehollern\\futbol\\Tests\\": "tests/src/"
     }
   }
 }
