--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,8 @@
   "require-dev": {
     "monolog/monolog": "1.0.*",
     "mockery/mockery": "~0.9",
-    "phpunit/phpunit": "^6.0"
+    "phpunit/phpunit": "^6.0",
+    "satooshi/php-coveralls": "dev-master"
   },
   "autoload": {
     "psr-4": {
