--- a/composer.json
+++ b/composer.json
@@ -25,8 +25,7 @@
     "source": "https://github.com/jamiehollern/futbol"
   },
   "require": {
-    "php": ">=7.0",
-    "anahkiasen/underscore-php": "~2.0"
+    "php": ">=7.0"
   },
   "require-dev": {
     "monolog/monolog": "1.0.*",
